# prism-insight

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  firebase_bridge.py  index.html  mcp_agent.config.yaml.example  pdf_converter.py  prism_service.py  pyproject.toml  requirements.txt  styles.css  telegram_bot_agent.py  telegram_summary_agent.py  trigger_results_in_morning_20240101.json  trigger_results_in_morning_20240102.json  trigger_results_in_morning_20240103.json  trigger_results_in_morning_20240104.json  trigger_results_in_morning_20240105.json  trigger_results_in_morning_20240108.json  trigger_results_in_morning_20240109.json  trigger_results_in_morning_20240110.json  trigger_results_in_morning_20240111.json  trigger_results_in_morning_20240112.json  trigger_results_in_morning_20240115.json  trigger_results_in_morning_20240116.json  trigger_results_in_morning_20240117.json  trigger_results_in_morning_20240118.json  trigger_results_in_morning_20240119.json  trigger_results_in_morning_20240122.json  trigger_results_in_morning_20240123.json  trigger_results_in_morning_20240124.json  trigger_results_in_morning_20240125.json  trigger_results_in_morning_20240129.json  trigger_results_in_morning_20240130.json  trigger_results_in_morning_20240131.json  trigger_results_in_morning_20240201.json  (+523 more)
cores/: report_generation.py  utils.py
data/: dashboard-data.json
docs/: CLAUDE_AGENTS.md  CLAUDE_TASKS.md  CLAUDE_TROUBLESHOOTING.md  KING2_STRATEGY.md  README.md  TRADING_STRATEGY.md  index.html
prism-in/: __init__.py  (+90 more)
(+21 files in other folders)
